# gurobi-machinelearning

./: .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  Generate_keras_test_network.ipynb  LICENSE  ONNX_EXPORT_GUIDE.md  README.md  batch_convert_to_mps.sh  copyright.txt  onnx_to_mps.py  pyproject.toml  requirements.keras.txt  requirements.lightgbm.txt  requirements.onnx.txt  requirements.pandas.txt  requirements.pytorch.txt  requirements.sklearn.txt  requirements.tox.txt  requirements.txt  requirements.xgboost.txt  setup.cfg  spec-file.txt  tox.ini  toxfile.py  vnnlib_parser.py  vnnlib_simple.py
.github/: dependabot.yml
.github/hooks/: license_embedded.py
.github/scripts/: insert_git_hash.sh  upload_anaconda.sh
.github/workflows/: PR.yml  PR_license.yml  PR_nolicense.yml  build_wheel.yml  docs.yml  publish_pypi.yml  push.yml  python-app.yml  ruff_action.yml
doc_source/: requirements.txt
doc_source/source/: api.rst  conf.py  examples.rst  firststeps-introduction.rst  firststeps-simple-example.md  index.rst  install.rst  meta-contactus.rst  meta-license.rst  mlm-examples.rst  mlm-further-reading.rst  mlm-supported.rst  quickstart.ipynb  quickstart.md  refs.bib  supported.rst
docs/: .buildinfo  Makefile  api.html  examples.html  firststeps-introduction.html  firststeps-simple-example.html  firststeps-simple-example.ipynb  genindex.html  index.html  install.html  meta-api.html  meta-bibliography.html  meta-contactus.html  meta-license.html  mlm-examples.html  mlm-further-reading.html  mlm-supported.html  objects.inv  quickstart.html  requirements.txt  search.html  searchindex.js  sklearn.html  start.html  supported.html
docs/_sources/: api.rst.txt  firststeps-introduction.rst.txt  firststeps-simple-example.md.txt  index.rst.txt  meta-bibliography.rst.txt  meta-contactus.rst.txt  mlm-supported.rst.txt  quickstart.ipynb.txt  start.rst.txt  supported.rst.txt
docs/_static/: basic.css  copybutton.js  documentation_options.js
docs/api/: AbstractPredictorConstr.html  DecisionTreeRegressorConstr.html  GradientBoostingRegressorConstr.html  KerasConstr.html  LinearRegressionConstr.html  LogisticRegressionConstr.html  MlpRegressorConstr.html  PipelineConstr.html  PolynomialFeaturesConstr.html  RandomForestRegressorConstr.html  SequentialConstr.html  StandardScalerConstr.html  add_constrs.html  add_decision_tree_regressor_constr.html  add_gradient_boosting_regressor_constr.html  add_keras_constr.html  add_linear_regression_constr.html  add_logistic_regression_constr.html  add_mlp_regressor_constr.html  add_pipeline_constr.html  add_polynomial_features_constr.html  add_predictor_constr.html  add_random_forest_regressor_constr.html  add_sequential_constr.html  add_standard_scaler_constr.html
docs/examples/: README.rst  adversarial_mnist.html  example1_2DPeakFunction.py  example2_student_admission.py  example3_adversarial_mnist.py  example4_price_optimization.py  gurobi.env  price_optimization.html
docs/examples_userguide/: README.rst  example_simple.py
docs/mlm-examples/: 2DPeakFunction.html  2DPeakFunction.ipynb  adversarial_mnist.html  adversarial_mnist.ipynb  price_optimization.html  price_optimization.ipynb  student_admission.html  student_admission.ipynb
docs/presentation/: gurobi.css  ml-gurobi.md
docs/source/: api.rst  conf.py  example.ipynb  examples.rst  firststeps-introduction.rst  firststeps-simple-example.md  index.rst  install.rst  meta-api.rst  meta-contactus.rst  meta-license.rst  mlm-examples  mlm-examples.rst  mlm-further-reading.rst  mlm-mip-models.rst  mlm-supported.rst  quickstart.ipynb  refs.bib  sg_execution_times.rst  sklearn.rst  userguide.rst
examples/: Makefile  dev_requirements.txt
examples/Functions_approx/: 2DPeakFunction Pytorch.ipynb  2DPeakFunction.ipynb  GOLDSTEIN-PRICE Sklearn.ipynb  Parabola.ipynb  ParabolaPyTorch.ipynb  ParabolaTree.ipynb
examples/Janos/: Decision Tree.ipynb  Linear regression function.ipynb  Linear regression simple.ipynb  Logistic Regression v3.ipynb  Logistic Regression vlb.ipynb  Logistic regression v2.ipynb  Logistic regression.ipynb  Neural networks.ipynb  Quadratic Regression.ipynb  Random Forest.ipynb
examples/Kadir/: Kadir.ipynb
examples/adversarial/: MNIST_100_100.joblib  MNIST_50_50.joblib  MNIST_first100.joblib  adversarial_keras.ipynb  adversarial_mnist.ipynb  training_adversarial.ipynb  training_adversarial_tf.ipynb
examples/advocado/: price_optimization.ipynb
examples/avocado/: price_optimization.ipynb
formulations/: Functions_Formulations.py  Janos_Formulations.py  Kadir_formulation.py  Kadir_heur.py  Kadir_pytorch.py  adversarial_formulations.py  doallformulations.py
gurobi/machinelearning/: activations.py
ml2grb/: activations2grb.py  ml2grb.py  pytorch2grb.py  sklearn2grb.py  tree2grb.py  utils.py
ml2grb/extra/: cuts.py  heur.py  morerelu.py  obbt.py
notebook_examples/: Makefile
notebooks/: Makefile  dev_requirements.txt  documentation_notebooks
requirements_test/: test_absval.py  test_import_without_requirements.py
test/: test_absval.py
tests/: base_cases.py  fixed_formulation.py  ml2grb  test_absval.py  test_bad_shapes.py  test_exceptions.py  test_formulation.py  test_keras_exceptions.py  test_register_constr.py  test_remove.py  test_sklearn_exceptions.py
(+540 files in other folders)
