[project]
name = "gurobi-machinelearning"
dynamic = ["version"]
description = "package to insert ML models in Gurobi"
readme = "README.md"
requires-python = ">=3.9"
license = {text="Apache-2.0"}
keywords = ["mathematical optimization", "gurobi", "scikit-learn", "pytorch", "tensorflow", "ml"]
authors = [
  {name = "Gurobi Optimization LLC"}
]
maintainers = [
  {email = "bonami@gurobi.com"},
  {name = "Pierre Bonami"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy >= 1.22.0",
  "gurobipy >= 10.0.0b1"
]

[project.urls]
repository = "https://github.com/Gurobi/gurobi-machinelearning"
documentation = "https://gurobi-optimization-gurobi-machine-learning.readthedocs-hosted.com"
"bug tracker" = "https://github.com/Gurobi/gurobi-machinelearning/issues"

[tool.setuptools.dynamic]
version = {attr = "gurobi_ml._version.__version__"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
