[project]
name = "gurobi-machinelearning"
version = "1.0.0a4"
description = "package to insert ML models in Gurobi"
readme = "README.md"
requires-python = ">=3.9"
license = {text="Apache-2.0"}
keywords = ["mathematical optimization", "gurobi", "scikit-learn", "pytorch", "tensorflow", "ml"]
authors = [
  {name = "Gurobi Optimization LLC"}
]
maintainers = [
  {email = "bonami@gurobi.com"},
  {name = "Pierre Bonami"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy >= 1.22.0",
  "gurobipy >= 10.0.0b1",
  "scipy >= 1.9.3"
]

[project.urls]
repository = "https://github.com/Gurobi/gurobi-machinelearning"
documentation = "https://gurobi-optimization-gurobi-machine-learning.readthedocs-hosted.com"
"bug tracker" = "https://github.com/Gurobi/gurobi-machinelearning/issues"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
