[metadata]
name = ml2gurobi
version = 0.0.1
author = Pierre Bonami
author_email = bonami@gurobi.com
description = package to insert ML models in Gurobi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gurobi/ml2gurobi
project_urls =
    Bug Tracker = https://github.com/Gurobi/ml2gurobi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    gurobipy

[options.packages.find]
where = src
