[metadata]
name = gurobi-machinelearning
version = 1.0.0.dev0
author = Pierre Bonami
author_email = bonami@gurobi.com
license = APACHE
description = package to insert ML models in Gurobi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gurobi/gurobi-machinelearning
project_urls =
    Bug Tracker = https://github.com/Gurobi/gurobi.machinelearning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    numpy >= 1.22.0
    gurobipy >= 10.0.0b1

[options.packages.find]
where = src
